src/BootstrapBlazor/Components/Table/Table.css
.table-container {
    position: relative;
    --bb-table-td-padding-x: .5rem;
    --bb-table-td-padding-y: .5rem;
    --bb-table-cardview-label-width: 30%;
    --bb-table-button-column-width: 130px;
    --bb-table-header-hover-bg: #e9ecef;
    --bb-table-header-icon-color: #ddd;
    --bb-table-header-icon-active-color: #409eff;
    --bb-table-header-icon-hover-bg: #ddd;
    --bb-table-header-icon-hover-color: #606266;
    --bb-table-footer-font-weight: blod;
    --bb-table-footer-border-top: 2px solid #dee2e6;
    --bb-table-loader-bg: #f8f9fa;
    --bb-table-card-row-padding: .75rem 0;
}

    .table-container .table:not(.table-excel) .switch {
        --bb-switch-padding: 0;
    }

    .table-container > :where(:not(:first-child):not(.table-loader):not(.table-wrapper), :not(.table-toolbar) + .table-wrapper) {
        margin-top: .5rem;
    }

    .table-container .table > :not(caption) > * > * {
        padding: var(--bb-table-td-padding-y) var(--bb-table-td-padding-x);
    }

.table-excel {
    --bb-border-hover-color: transparent;
    --bb-border-focus-color: transparent;
    --bs-border-color: transparent;
    --bs-border-radius: 0;
}

.table-dark {
    --bb-table-header-hover-bg: #343a40;
    --bb-table-header-icon-hover-bg: #6c757d;
    --bb-table-header-icon-hover-color: #495057;
}

.table-light {
    --bb-table-header-icon-color: #c0c4cc;
    --bb-table-header-icon-hover-color: #495057;
}

.table-sm {
    --bb-table-td-padding-x: .25rem;
    --bb-table-td-padding-y: .25rem;
}

.filter-header th {
    --bb-table-td-padding-x: 0;
    --bb-table-td-padding-y: 0;
}

    .filter-header th:hover {
        --bb-table-header-hover-bg: transparent;
    }

.table-wrapper {
    border-radius: var(--bs-border-radius);
    border: 1px solid var(--bs-border-color);
}

    .table-wrapper thead tr:first-child {
        border-top: none;
    }

    .table-wrapper tbody tr:last-child {
        border-bottom: none;
    }

    .table-wrapper th:first-child,
    .table-wrapper td:first-child,
    .table-wrapper th.fixed-scroll {
        border-left-width: 0;
    }

    .table-wrapper th:last-child,
    .table-wrapper td:last-child,
    .table-wrapper .table-fixed-header th:nth-last-of-type(2) {
        border-right-width: 0;
    }

    .table-wrapper tr:last-child td {
        border-bottom-width: 0;
    }

    .table-wrapper .table-fixed-body td:last-child {
        border-right-width: 1px;
    }

.table-th-button {
    width: var(--bb-table-button-column-width);
}

.table {
    margin-bottom: 0;
}

    .table thead th, .table tbody td {
        border-top: none;
    }

    .table thead th {
        white-space: nowrap;
        vertical-align: top;
    }

        .table thead th:where(.sortable, .filterable) .table-text {
            padding-right: 1rem;
        }

        .table thead th:where(.sortable, .filterable):hover {
            background-color: var(--bb-table-header-hover-bg);
        }

        .table thead th .table-cell {
            position: relative;
        }

        .table thead th .table-text {
            flex: 1;
        }

        .table thead th :where(.table-filter-icon, .table-sort-icon) {
            position: absolute;
            right: calc(0px - var(--bb-table-td-padding-x));
            top: calc(0px - var(--bb-table-td-padding-y));
            bottom: calc(0px - var(--bb-table-td-padding-y));
            width: 1.5rem;
            display: flex;
            align-items: center;
            justify-content: center;
            color: var(--bb-table-header-icon-color);
            cursor: pointer;
        }

            .table thead th :where(.table-filter-icon, .table-sort-icon):hover {
                background-color: var(--bb-table-header-icon-hover-bg);
                color: var(--bb-table-header-icon-hover-color);
            }

        .table thead th .table-filter-icon.active {
            color: var(--bb-table-header-icon-active-color);
        }

        .table thead th.sortable.filterable .table-filter-icon {
            right: calc(1.5rem - var(--bb-table-td-padding-x));
        }

        .table thead th.sortable.filterable .table-text {
            padding-right: 2.5rem;
            overflow: hidden;
            text-overflow: ellipsis;
        }

    .table tfoot {
        font-weight: var(--bb-table-footer-font-weight);
        border-top: var(--bb-table-footer-border-top);
    }

    .table td, .table th {
        min-width: 0;
        text-overflow: ellipsis;
    }

    .table .is-editform .table-cell {
        overflow: hidden;
    }

.is-clickable tbody tr,
.is-clickable .table-row {
    cursor: pointer;
}

.table-cell {
    display: flex;
    align-items: center;
    word-break: break-all;
}

    .table-cell .btn-group .btn {
        white-space: nowrap;
    }

.table-hover tbody tr.is-detail:hover,
.table-hover tbody tr.is-editform,
.table-hover tbody tr.is-editform:hover {
    --bs-table-accent-bg: unset;
}

.table tbody tr.is-master td:first-child {
    padding-left: 0;
    padding-right: 0;
}

.table-toolbar:after {
    content: "";
    display: block;
    clear: both;
}

.table-toolbar .table-toolbar-button {
    margin-bottom: .5rem;
}

.table-toolbar .dropdown-menu .dropdown-item span {
    margin-left: .5rem;
}

.btn-gear .dropdown-menu {
    min-width: initial;
    padding: 0;
}

    .btn-gear .dropdown-menu .dropdown-item {
        padding: 6px 12px;
        display: table-cell;
        color: #504d4d;
    }

        .btn-gear .dropdown-menu .dropdown-item:not(:first-child) {
            border-left: solid 1px #aeb2b7;
        }

.table-column-right {
    margin-left: 0.3125rem;
}

.search-input-tooltip {
    font-size: 0.75rem;
}

    .search-input-tooltip kbd {
        display: inline-block;
        background: #17a2b8;
        padding: 1px 6px;
    }

.table-fixed {
    height: 100%;
}

    .table-fixed .table {
        table-layout: fixed;
    }
/* ... */

